All models running, LSTM wip

--- a/src/svm_basic.ipynb
+++ b/src/svm_basic.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.svm import SVR\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import plotly.graph_objects as go"
    ]
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "6139  2023-12-01  17527.0  17531.0  17215.0  17302.0    17302.0  1644414"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31752,7 +31752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31769,7 +31769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -31897,7 +31897,7 @@
        "6139  17533.0  17204.0  17376.0  4495273.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31915,7 +31915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31935,7 +31935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31950,7 +31950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31967,21 +31967,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Squared Error - Open: 30684.698166784074\n",
-      "Mean Squared Error - High: 49363.112684693\n",
-      "Mean Squared Error - Low: 59133.05699506489\n",
-      "Mean Squared Error - Close: 98697.99067170122\n",
-      "Mean Squared Error - Volume: 21516320053701.31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize a dictionary to store models and MSE\n",
     "models = {}\n",
@@ -31991,7 +31979,7 @@
     "# Train separate models for each target variable in a for loop\n",
     "for column in y.columns:\n",
     "    # Initialize SVR for each target variable\n",
-    "    model = LinearRegression()\n",
+    "    model = SVR()\n",
     "    # Train the model\n",
     "    model.fit(X_train, y_train[column])\n",
     "    \n",
@@ -32020,7 +32008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
