Refactor for Dr Netshikweta

--- a/src/xgb_basic.ipynb
+++ b/src/xgb_basic.ipynb
@@ -7,10 +7,7 @@
     "# Econophysics and Sociophysics\n",
     "Authors:\n",
     "\n",
-    "- Rofhiwa (Ralph) Matumba\n",
-    "- Faith Mabushe\n",
-    "- Enos Nemukula\n",
-    "- Philemon Ralukake"
+    "- Rofhiwa (Ralph) Matumba"
    ]
   },
   {
@@ -32099,7 +32096,7 @@
     "\n",
     "# Train separate models for each target variable in a for loop\n",
     "for column in y.columns:\n",
-    "    # Initialize SVR for each target variable\n",
+    "\n",
     "    model = XGBRegressor()\n",
     "    # Train the model\n",
     "    model.fit(X_train, y_train[column])\n",
