Brownian motion created and done

--- a/src/tcn_basic.ipynb
+++ b/src/tcn_basic.ipynb
@@ -19,14 +19,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tcn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/matumba/Documents/Postgraduate/NITheCS/phynance-old/src/tcn_basic.ipynb Cell 3\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matumba/Documents/Postgraduate/NITheCS/phynance-old/src/tcn_basic.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matumba/Documents/Postgraduate/NITheCS/phynance-old/src/tcn_basic.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgraph_objects\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgo\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/matumba/Documents/Postgraduate/NITheCS/phynance-old/src/tcn_basic.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtcn\u001b[39;00m \u001b[39mimport\u001b[39;00m TCN, tcn_full_summary\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matumba/Documents/Postgraduate/NITheCS/phynance-old/src/tcn_basic.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m Sequential\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/matumba/Documents/Postgraduate/NITheCS/phynance-old/src/tcn_basic.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlayers\u001b[39;00m \u001b[39mimport\u001b[39;00m Dense, Flatten\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tcn'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from tcn import TCN, tcn_full_summary\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Flatten\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import yfinance as yf\n",
     "\n",
@@ -49,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31812,7 +31826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31829,7 +31843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31984,7 +31998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32004,7 +32018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32019,12 +32033,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_size = 0.2\n",
-    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size=test_size)"
+    "X_train, y_train, X_test, y_test = train_test_split(X, y, test_size=test_size)\n",
+    "\n",
+    "# Reshape the data to fit the TCN input shape\n",
+    "X_train_reshaped = X_train.reshape((X_train.shape[0], X_train.shape[1], 1))\n",
+    "X_test_reshaped = X_test.reshape((X_test.shape[0], X_test.shape[1], 1))"
    ]
   },
   {
@@ -32036,7 +32054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -32056,13 +32074,26 @@
     "# Train separate models for each target variable in a for loop\n",
     "for column in y.columns:\n",
     "\n",
-    "    model = LinearRegression()\n",
+    "    # Build the TCN model\n",
+    "    model = Sequential([\n",
+    "        TCN(input_shape=(X_train_reshaped.shape[1], 1), return_sequences=True),\n",
+    "        Flatten(),\n",
+    "        Dense(units=1)\n",
+    "    ])\n",
+    "\n",
+    "    model.compile(optimizer='adam', loss='mse')\n",
+    "\n",
+    "    # Display model summary\n",
+    "    tcn_full_summary(model)\n",
+    "\n",
     "    # Train the model\n",
-    "    model.fit(X_train, y_train[column])\n",
-    "    \n",
+    "    model.fit(X_train_reshaped, y_train_scaled, epochs=50, batch_size=32, validation_split=0.1)\n",
+    "\n",
     "    # Make predictions on the test set\n",
-    "    predictions = model.predict(X_test)\n",
-    "    pred.append(predictions)\n",
+    "    predictions_scaled = model.predict(X_test_reshaped).ravel()\n",
+    "\n",
+    "    # Inverse transform the predictions to the original scale\n",
+    "    predictions = scaler_y.inverse_transform(predictions.reshape(-1, 1)).ravel()\n",
     "    \n",
     "    # Store the model and predictions\n",
     "    models[column] = model\n",
@@ -32086,7 +32117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -37888,7 +37919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38715,7 +38746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38726,7 +38757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
