--- a/src/svm_basic.ipynb
+++ b/src/svm_basic.ipynb
@@ -538,7 +538,7 @@
     "plt.plot(X_test.index, y_test, c='blue')\n",
     "plt.plot(pred.index, pred.get('Close'), ':', c='red')\n",
     "plt.legend(['Actual', 'Predicted'])\n",
-    "plt.savefig(f'figures/SVR/{stock}_pred_vs_true.svg')"
+    "plt.savefig(f'{path}/{stock}_pred_vs_true.svg')"
    ]
   },
   {
@@ -619,7 +619,7 @@
     "plt.xlabel('Day (December 2023)')\n",
     "plt.ylabel('Closing Price (R)')\n",
     "plt.legend(['Predicted', 'Forecast'])\n",
-    "plt.savefig(f'figures/SVR/{stock}_forecast.svg')"
+    "plt.savefig(f'{path}/{stock}_forecast.svg')"
    ]
   }
  ],
